# uav-travel-and-offload

./: .gitignore  CMakeLists.txt  LICENSE  LoRa.h  PW.h  Point.h  README.md  SF.h  Sensor.h  SpreadingFactor.h  generate_roi_grid.h  geo_utils.h  main.cpp  neighborhood.h  read_data.h
include/: json.hpp
solutions/100/: a_solution.json  a_solution.sol  b_solution.json  b_solution.sol  c_solution.json  c_solution.sol  d_solution.json  e_solution.json  e_solution.sol  f_solution.json  f_solution.sol  g_solution.json  g_solution.sol  h_solution.json  h_solution.sol  i_solution.json  i_solution.sol  j_solution.json  j_solution.sol  solution_features_summary_100.csv  solutions_summary.csv
solutions/200/: a_solution.json  b_solution.json  c_solution.json  d_solution.json  e_solution.json  f_solution.json  g_solution.json  h_solution.json  i_solution.json  j_solution.json  solution_features_summary.csv  solutions_summary.csv
solutions/25/: a_solution.json  a_solution.sol  b_solution.json  b_solution.sol  c_solution.json  c_solution.sol  d_solution.json  d_solution.sol  e_solution.json  e_solution.sol  f_solution.json  f_solution.sol  g_solution.json  g_solution.sol  h_solution.json  h_solution.sol  i_solution.json  i_solution.sol  j_solution.json  j_solution.sol  solution_features_summary_25.csv  solutions_summary.csv
solutions/50/: a_solution.json  a_solution.sol  b_solution.json  b_solution.sol  c_solution.json  c_solution.sol  d_solution.json  d_solution.sol  e_solution.json  e_solution.sol  f_solution.json  f_solution.sol  g_solution.json  g_solution.sol  h_solution.sol  (+7 more)
(+60 files in other folders)
